# typeman

./: CLAUDE.md  Cargo.toml  NIX_USAGE.md  README.md  default.nix  flake.nix
src/: color_scheme.rs
src/ui/gui/: main.rs  popup.rs
src/ui/tui/: app.rs
