[package]
name = "typeman"
version = "1.0.1"
edition = "2024"
readme = "README.md"
repository = "https://github.com/mzums/typeman"
license = "MIT"
keywords = ["typing", "type", "monkeytype", "typetest", "speed"]
categories = ["command-line-utilities", "games", "gui"]
description = "Typing speed test with practice mode in GUI, TUI and CLI"

[features]
default = ["cli", "tui", "gui"]

cli = ["crossterm", "ratatui"]
tui = ["crossterm", "ratatui"]
gui = ["macroquad", "eframe", "egui_plot", "egui-macroquad"]

light = ["cli", "tui"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9.1"
chrono = { version = "0.4", features = ["serde"] }
fs2 = "0.4"

macroquad = { version = "0.4.14", optional = true }
eframe = { version = "0.31.1", optional = true }
egui_plot = { version = "0.32.1", optional = true }
egui-macroquad = { version = "0.17.3", optional = true }

crossterm = { version = "0.27.0", optional = true }
ratatui = { version = "0.29.0", optional = true }
